[package]
name = "forerust"
version = "0.0.1"
authors = ["Justin Fitzsimmons <justinf@nulogy.com>", "Ryan De Villa <ryand@nulogy.com>"]

[dependencies]
dotenv = "0.10.0"
futures = "0.1"
tokio-core = "0.1"
tokio-process = "0.1"
tokio-io = "0.1"
chrono = "0.3"
ansi_term = "0.9"

[[bin]]
name = "forerust"
path = "bin/main.rs"
